--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,72 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/consraint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:layout_gravity="center"
-            android:id="@+id/openDrawer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/txtCity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <ImageView
-        android:id="@+id/imgWeatherMode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="0dp"
+        app:layout_constraintVertical_bias=".4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@color/colorPrimary"
+        >
+
 
     <TextView
-        android:id="@+id/txtTemperature"
+        android:id="@+id/txtCity"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_margin="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/txtTemperature"
+            app:layout_constraintTop_toBottomOf="@id/imgWeatherMode"
+            android:gravity="center"
+            android:textSize="30sp"
+            app:layout_constraintLeft_toLeftOf="@id/imgWeatherMode"
+            app:layout_constraintRight_toRightOf="@id/imgWeatherMode"
+            android:fontFamily="sans-serif-medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/imgWeatherMode"
+        app:layout_constraintTop_toBottomOf="@id/txtCity"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintLeft_toLeftOf="@id/txtCity"
+        app:layout_constraintRight_toRightOf="@id/txtCity"
+        android:elevation="20dp"
+        android:translationZ="10dp"
+    />
+
+        <Button
+            android:id="@+id/openDrawer"
+            android:background="@mipmap/placeholder"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="25dp"
+            android:layout_height="25dp"/>
+
+
+        <View
+            android:id="@+id/line"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtTemperature"
+            android:elevation="10dp"
+            app:layout_constraintBottom_toTopOf="@id/recycler_view"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_height="1dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintVertical_bias="0.6"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="15dp"
+            android:backgroundTint="@color/colorPrimary"
+
             />
 
-    </LinearLayout>
 
-    <LinearLayout
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="vertical"
         android:layout_width="270dp"
         android:layout_height="match_parent"
         android:gravity="left"
-        android:background="@color/colorPrimary"
         android:layout_gravity="start"
+        android:layout_marginLeft="10dp"
+        android:backgroundTint="@color/dark"
         >
+
+
 
         <EditText
             android:id="@+id/edtCity"
             android:hint="Enter a city name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/btnOk"
             android:text="ok"
+            app:layout_constraintTop_toBottomOf="@id/edtCity"
+            app:layout_constraintLeft_toLeftOf="@id/edtCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/searchedBefore"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:background="@color/dark"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/btnOk"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias=".7"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            >
 
         </androidx.recyclerview.widget.RecyclerView>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
